tests/regression/error/hw4_error21.nex
var j; var i;
   i = true;
   j = 5;
   while (i)
   {
      if (j < 0)
      {
         i = none;
      }
      j = j - 1;
      print j;
      print ":n";
   }
